# fimo

./: Cargo.toml  README.md
src/: mapping.rs  mongo.rs  template.rs  transform.rs
src/tests/data/: extended.csv
src/tests/templates/: upsert.j2
tests/mapping/: extended.yaml
