[package]
name = "fimo"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to import CSV files into MongoDB"
license = "MIT"
repository = "https://github.com/fimo-org/fimo"
readme = "README.md"
keywords = ["mongodb", "csv", "cli", "import"]
categories = ["command-line-utilities", "database"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
csv = "1.2"
bson = { version = "2.8", features = ["chrono-0_4"] }
mongodb = "3.1.1"
minijinja = { version = "1.0.12", features = ["builtins","loader"] }
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde"] }

